module(
    name = "rules_boost",
    repo_name = "com_github_nelhage_rules_boost",
    version = "0.0.1-bzlmod",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "bzip2", version = "1.0.8")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "boost")
use_repo(non_module_dependencies, "com_github_facebook_zstd")
use_repo(non_module_dependencies, "openssl")
use_repo(non_module_dependencies, "org_lzma_lzma")
use_repo(non_module_dependencies, "zlib")
